Create database and tables for employee department and role

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/dodor101/employee-tracker#readme",
   "dependencies": {
+    "inquirer": "^8.2.4",
     "mysql2": "^3.1.2"
   }
 }
