--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "This application is an employee tracker app that will be executed using the command line.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -23,5 +22,8 @@
     "figlet": "^1.5.2",
     "inquirer": "^8.2.4",
     "mysql2": "^3.1.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
